--- a/EmployeesList_Homework/Views/Home/EmployeesList.cshtml
+++ b/EmployeesList_Homework/Views/Home/EmployeesList.cshtml
@@ -1,7 +1,4 @@
-﻿
-@{
-    Layout = null;
-}
+﻿@model IEnumerable<EmployeesList_Homework.Models.Employee>
 
 <!DOCTYPE html>
 
@@ -12,5 +9,26 @@
 </head>
 <body>
     <h2>Список сотрудников</h2>
+    <table>
+        <thead>
+            <tr>
+                <td>Имя</td>
+                <td>Фамилия</td>
+                <td>Отчество</td>
+                <td>Возраст</td>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var employee in Model)
+            {
+                <tr>
+                    <td>@employee.Name</td>
+                    <td>@employee.Surename</td>
+                    <td>@employee.Patronymic</td>
+                    <td>@employee.Age</td>
+                </tr>
+             }
+            </tbody>
+    </table>
 </body>
 </html>
