Добавлена возможность вывода детальной информации о сотруднике

--- a/EmployeesList_Homework/Views/Home/EmployeesList.cshtml
+++ b/EmployeesList_Homework/Views/Home/EmployeesList.cshtml
@@ -21,12 +21,13 @@
         <tbody>
             @foreach (var employee in Model)
             {
-                <tr>
-                    <td>@employee.Name</td>
-                    <td>@employee.Surename</td>
-                    <td>@employee.Patronymic</td>
-                    <td>@employee.Age</td>
-                </tr>
+            <tr>
+                <td>@employee.Name</td>
+                <td>@employee.Surename</td>
+                <td>@employee.Patronymic</td>
+                <td>@employee.Age</td>
+                <td>@Html.ActionLink("Подробнее", "Details", new { id = employee.Id })</td>                
+            </tr>
              }
             </tbody>
     </table>
